# pyxllib

./: .gitignore  LICENSE  MANIFEST.in  README.md  REFACTOR_GUIDE.md  debuglib.py  distribute.py  pyproject.toml  requirements-more.txt  requirements.txt  requirements_full.txt  setup.py
.github/workflows/: publish.yml  python-publish.yml
.trae/: .ignore
docs/: autogui_floating_template_case.md  behavior_tree_design.md  legacy_file_design.md  tasksched_design.md
kzchen/: kzchen.py
pyxllib/: __init__.py  debuglib.py  sitepackages.py  xl.py  xlai.py  xlcv.py  xlwork.py
pyxllib/ai/: __init__.py  aip.py  aiplib.py  app.py  chat.py  paddlelib.py  pp.py  specialist.py  torch.py  torch_app.py
pyxllib/algo/: __init__.py  disjoint.py  geo.py  geo_basic.py  group.py  intervals.py  matcher.py  newbie.py  order.py  pupil.py  shapely_.py  specialist.py  stat.py  treelib.py  unitlib.py
pyxllib/autogui/: activewin.py  all.py  anlib.py  aulib.py  autogui.py  auwindow.py  labelui.py  uiautolib.py  wechat.py  wechat_msgbox.py  wxautolib.py
pyxllib/basic/: _1_strlib.py  _2_timelib.py  _3_filelib.py  _3_pathlib.py  _4_loglib.py  _5_dirlib.py  __init__.py  advfile.py  arrow_.py  chardet_.py  dir.py  dirlib.py  dprint.py  extension.py  file.py  intervals.py  jsondata.py  log.py  most.py  pathlib_.py  pytictoc.py  qiniu_.py  str.py  strlib.py  time.py  timer.py  unsorted.py
pyxllib/cv/: _0_installer.py  _1_geo.py  _2_cvprcs.py  _3_pilprcs.py  _4_cvimg.py  _5_trackbartools.py  __init__.py  cv.py  cvimg.py  cvprcs.py  debugtools.py  expert.py  fitz.py  fitz_.py  fitzlib.py  geo.py  im.py  imfile.py  imhash.py  imlib.py  installer.py  most.py  newbie.py  pilprcs.py  pupil.py  rgbfmt.py  slidercaptcha.py  trackbartools.py  xlcv.py  xlcvlib.py  xlpil.py  xlpillib.py
pyxllib/data/: __init__.py  casiadb.py  coco.py  echarts.py  json2table.py  jsonlib.py  label.py  labelme.py  labelmelib.py  oss.py  oss2_.py  pglib.py  specialist.py  sqlite.py  sqllib.py  xlprdb.py  xlprdb_.py
pyxllib/database/: dnld.py  oss.py  sqlite.py  sqllib.py
pyxllib/debug/: _0_installer.py  _1_typelib.py  _2_browser.py  _2_chrome.py  _3_showdir.py  _4_bcompare.py  __init__.py  all.py  arrow_.py  base.py  basic.py  bc.py  bcompare.py  browser.py  chardet_.py  chrome.py  dirlib.py  dprint.py  installer.py  log.py  main.py  most.py  newbie.py  pathlib_.py  pupil.py  pytictoc.py  qiniu_.py  showdir.py  strlib.py  timer.py  type.py  typelib.py  xllog.py
pyxllib/ex/: ckz2021.py  demolib.py  dist.py
pyxllib/example/: __init__.py  check_pyxllib.py  demolib.py
pyxllib/excel/: __init__.py  excellib.py  expert.py  index.py  newbie.py  pupil.py
pyxllib/ext/: JLineViewer.py  drissionlib.py  kq5034lib.py  qt.py  robustprocfile.py  seleniumlib.py  unixlib.py  utools.py  webhook.py  win32lib.py  wjxlib.py  wpsapi.py  xlwork.py  yuquelib.py
pyxllib/extend/: __init__.py  aip_.py  arrow_.py  chardet_.py  old.py  pathlib_.py  pillow_.py  pyautogui_.py  pytictoc.py  qiniu_.py  unixlib.py  utools.py  zipfile.py
pyxllib/file/: __init__.py  advance.py  base.py  basic.py  dir.py  docxlib.py  file.py  gitlib.py  libreoffice.py  movielib.py  newbie.py  onenotelib.py  pdflib.py  pupil.py  sync.py  xlsxlib.py  xlsyncfile.py
pyxllib/gui/: qt.py  tk.py  tklib.py
pyxllib/image/: _0_installer.py  _1_imlib.py  _2_fitz.py  __init__.py  aip_.py  all.py  cv.py  fitz.py  fitz_.py  im.py  imlib.py  installer.py  most.py  shapely_.py
pyxllib/prog/: __init__.py  advance.py  base.py  basic.py  cachetools.py  commonlib.py  deprecatedlib.py  filelock.py  ipyexec.py  lazyimport.py  multiprocs.py  multiprogs.py  multiprogs2.py  newbie.py  prog.py  pupil.py  scheduler.py  sitepackages.py  specialist.py  type.py  unorder.py  user.py  xlenv.py  xllog.py  xlosenv.py  xltime.py
pyxllib/robot/: __init__.py  aip.py  autogui.py  docxlib.py  gitlib.py  main.py  old.py  unixlib.py  utools.py  webhook.py  win32lib.py
pyxllib/stdlib/: __init__.py  shutil.py  zipfile.py
pyxllib/text/: _0_installer.py  _1_base.py  _2_xml.py  _3_interval.py  _3_nestenv.py  _4_latex.py  _4_nestenv.py  _5_latex.py  __init__.py  advance.py  ahocorasick.py  airscript.js  basic.py  charclasslib.py  ex.py  jiebalib.py  jinjalib.py  jsa_ai_prompt.md  jscode.py  latex.py  levenshtein.py  most.py  nestenv.py  newbie.py  pstr.py  pycode.py  spellchecker.py  str.py  xlalign.py  xml.py  xmllib.py
pyxllib/time/: __init__.py  tictoc.py
pyxllib/tool/: listfiles.py
pyxllib/tools/: __init__.py
pyxllib/torch/: __init__.py  modellib.py  trainlib.py
pyxllib/util/: __init__.py  aip_.py  casiadb.py  chrome.py  ddprint.py  demolib.py  dirlib.py  excellib.py  filelib.py  gitlib.py  imlib.py  intervals.py  jsondata.py  jsondata2.py  judge.py  labelmelib.py  main.py  mathlib.py  nutstore.py  oss2_.py  primath.py  pyautogui_.py  qt.py  sqllib.py  textlib.py  textlib2.py  timer.py  tklib.py  unorder.py  userlib.py  webhooklib.py  xmllib.py
pyxllib/utools/: __init__.py
pyxlpr/: d2.py  paddleocr.py  xlai.py  xlpr.py
pyxlpr/ai/: __init__.py  aiplib.py  chat.py  clientlib.py  gptlib.py  paddle.py  paddlelib.py  specialist.py  torch.py  xlpaddle.py
pyxlpr/data/: __init__.py  coco.py  datacls.py  datasets.py  gptlib.py  imtextline.py  labelme.py  removeline.py  specialist.py  tiktokenlib.py
pyxlpr/eval/: __init__.py
pyxlpr/openai2/: __init__.py  pyproject.toml
pyxlpr/openai2/_core/: chat.py
pyxlpr/ppocr/: paddleocr.py
pyxlpr/ppstructure/: predict_system.py  utility.py
src/kq5034/: __init__.py  attendance_api.py  common.py  db.py  kqtools.py  order_ops.py  questionnaire.py  tools.py  wechat_runtime.py  weipay.corrupted.20260502.py  weipay.cpython-313.py  weipay.py  wjx_automation.py  xiaoetong.py
src/pyxllib/: __init__.py  api.py  xl.py  xlcv.py  xlwork.py
src/pyxlpr/: __init__.py  paddleocr.py
src/wxautox/: __init__.py  elements.py  errors.py  languages.py  uiautomation.py  uiplug.py  utils.py  wxauto.py
tests/: test_pycode_quotes.py  test_uni_cache.py
tests/browser/: test_basic.py  (+1 more)
xlproject/: kq5034lib.py  xlclientlib.py  xlserverlib.py  xxmnq.py  核酸统计工具_在线版.py
(+356 files in other folders)
